# LightSensor

./: .gitignore  pyproject.toml
light_sensor/: __init__.py  opt3001.py
