[tool.poetry]
name = "OPT3001"
version = "0.1.0"
description = "Python class for interfacing the OPT3001 using SM-USB-DIG board"
authors = ["YitzhakPeleg <yitzhak.peleg@gmail.com>"]
# readme = "README.md"
packages = [{ include = "opt3001" }]

[tool.poetry.dependencies]
python = "^3.9"
pyusb = "^1.2.1"
libusb-package = "^1.0.26.2"


[tool.poetry.group.dev.dependencies]
tqdm = "^4.66.2"
ruff = "^0.3.4"
jupyterlab = "^4.1.5"
plotly = "^5.20.0"
pandas = "^2.2.1"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
